--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header class="topbar">
     <div class="brand">
-      <div class="badge">VR</div>
+<img src="./wolf.png" class="badgeImg">
       <div class="brandText">
         <div class="brandName">VeteransRadio.ca</div>
         <div class="brandSub">Tap a station to tune in</div>
