--- a/index.html
+++ b/index.html
@@ -55,23 +55,18 @@
 
     <!-- KICK STREAM PANEL -->
     <section class="kickPanel">
-      <div class="kickHead">
-        <div class="kickTitle">KICK STREAM</div>
-        <a class="kickLink" href="https://kick.com/veteransradio" target="_blank" rel="noopener">
-          OPEN IN KICK
-        </a>
-      </div>
+    <div class="kickFrameWrap">
+  <iframe
+    class="kickFrame"
+    src="https://player.kick.com/veteransradio?autoplay=false"
+    title="VeteransRadio Kick Stream"
+    loading="lazy"
+    referrerpolicy="no-referrer"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+</div>
 
-      <div class="kickFrameWrap">
-        <iframe
-          class="kickFrame"
-          src="https://kick.com/veteransradio"
-          title="VeteransRadio Kick Stream"
-          loading="lazy"
-          referrerpolicy="no-referrer"
-          allow="autoplay; fullscreen; picture-in-picture"
-        ></iframe>
-      </div>
 
       <div class="kickFallback">
         If the stream area stays blank, Kick may block embed. Use the button above.
