--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
 
     <section class="stations">
-      <div class="stationsHint">Stations</div>
+      <div class="stationsHint">RADIO STATIONS</div>
       <div id="stationGrid" class="grid"></div>
       <div class="tinyHint">To add stations, edit <span class="mono">stations.json</span></div>
     </section>
