--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       <div class="tinyHint">To add stations, edit <span class="mono">stations.json</span></div>
     </section>
 
+<div class="stationsHint">KICK.COM LIVE!! VIDEO STREAM</div>
+
+
     <!-- KICK STREAM PANEL -->
     <section class="kickPanel">
     <div class="kickFrameWrap">
