--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
         <div class="playerLabel smallGap">TRACK</div>
         <div id="track" class="track">Now Playing unavailable</div>
 
-        <div class="controls">
-          <button id="pauseBtn" class="btn secondary" disabled>Pause</button>
-          <button id="stopBtn" class="btn danger" disabled>Stop</button>
-        </div>
-      </div>
+<div class="controls">
+  <button id="pauseBtn" class="btn secondary" disabled>Pause</button>
+  <button id="stopBtn" class="btn danger" disabled>Stop</button>
+</div>
 
-      <div class="playerRight">
-        <div class="volLabel">Volume</div>
-        <input id="volume" class="vol" type="range" min="0" max="1" step="0.01" value="0.5" />
-      </div>
-    </section>
+<div class="volBlock">
+  <div class="volLabel">Volume</div>
+  <div class="volRow">
+    <button id="muteBtn" class="muteBtn" type="button">MUTE</button>
+    <input id="volume" class="vol" type="range" min="0" max="1" step="0.01" value="0.3" />
+  </div>
+</div>
+
 
     <section class="stations">
       <div class="stationsHint">RADIO STATIONS</div>
